--- a/src/ressources/xml/carnet.fxml
+++ b/src/ressources/xml/carnet.fxml
@@ -8,17 +8,17 @@
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="700.0" styleClass="page" stylesheets="@../css/page.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PageController">
    <children>
-      <TextField id="title" alignment="TOP_CENTER" styleClass="text-field" text="Add Title">
+      <TextField id="title" fx:id="title" alignment="TOP_CENTER" onKeyTyped="#update" styleClass="text-field" text="Add Title">
          <font>
-            <Font name="Ani" size="63.0" />
+            <Font name="Chilanka Regular" size="63.0" />
          </font>
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
       </TextField>
-      <TextArea prefHeight="500.0" styleClass="text-area" text="Write your notes here..." wrapText="true">
+      <TextArea fx:id="text" onKeyTyped="#update" prefHeight="500.0" styleClass="text-area" text="Write your notes here..." wrapText="true">
          <font>
-            <Font name="Ani" size="30.0" />
+            <Font name="Chilanka Regular" size="30.0" />
          </font>
       </TextArea>
       <fx:include source="img-date-loc.fxml" />
