--- a/src/ressources/xml/carnet.fxml
+++ b/src/ressources/xml/carnet.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -70,21 +71,23 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <GridPane alignment="CENTER" GridPane.columnIndex="1">
+            <GridPane alignment="CENTER" prefWidth="48.0" GridPane.columnIndex="1">
               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="75.0" />
+                  <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="75.0" />
                 <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="150.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="75.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="TOP" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefWidth="145.0" text="10/10" GridPane.columnIndex="1">
+                  <Label fx:id="pageNumber" alignment="TOP_CENTER" contentDisplay="CENTER" prefHeight="100.0" prefWidth="150.0" GridPane.columnIndex="1">
                      <font>
-                        <Font name="Chilanka Regular" size="69.0" />
+                        <Font name="Chilanka Regular" size="70.0" />
                      </font>
                   </Label>
+                  <ImageView fx:id="rightArrow" fitHeight="45.0" fitWidth="50.0" onMouseClicked="#turnPageRight" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.valignment="CENTER" />
+                  <ImageView fx:id="leftArrow" fitHeight="45.0" fitWidth="50.0" onMouseClicked="#turnPageLeft" pickOnBounds="true" preserveRatio="true" GridPane.valignment="CENTER" />
                </children>
             </GridPane>
          </children>
