--- a/src/ressources/xml/dayPage.fxml
+++ b/src/ressources/xml/dayPage.fxml
@@ -16,7 +16,7 @@
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="700.0" styleClass="page" stylesheets="@../css/page.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TextField id="title" fx:id="title" alignment="TOP_CENTER" styleClass="text-field" text="Add Title">
+      <TextField id="title" fx:id="title" alignment="TOP_CENTER" promptText="Add Title" styleClass="text-field">
          <font>
             <Font name="Chilanka Regular" size="63.0" />
          </font>
@@ -24,7 +24,7 @@
             <Insets />
          </opaqueInsets>
       </TextField>
-      <TextArea fx:id="description" prefHeight="500.0" styleClass="text-area" text="Write your notes here..." wrapText="true">
+      <TextArea fx:id="description" prefHeight="500.0" promptText="Write your notes here..." styleClass="text-area" wrapText="true">
          <font>
             <Font name="Chilanka Regular" size="30.0" />
          </font>
