--- a/src/ressources/xml/cover.fxml
+++ b/src/ressources/xml/cover.fxml
@@ -16,7 +16,7 @@
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="700.0" styleClass="page" stylesheets="@../css/cover.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TextField id="title" fx:id="title" alignment="CENTER" promptText="TITLE">
+      <TextField id="title" fx:id="title" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyTyped="#adjustFontSize" prefHeight="180.0" prefWidth="700.0" promptText="TITLE">
          <font>
             <Font name="Chilanka Regular" size="150.0" />
          </font>
