added return to home page button and some styling

--- a/src/ressources/css/cover.css
+++ b/src/ressources/css/cover.css
@@ -1,5 +1,6 @@
 .page {
-    -fx-background-image:url('../img/page.png');
+    -fx-background-image:url('../img/leather.jpg');
+    -fx-background-size: cover;
 }
 
 #title, #author, #participants{
