--- a/src/ressources/xml/dayPage.fxml
+++ b/src/ressources/xml/dayPage.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="700.0" styleClass="page" stylesheets="@../css/page.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="background" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="700.0" styleClass="page" stylesheets="@../css/page.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <TextField id="title" fx:id="title" alignment="TOP_CENTER" onKeyTyped="#checkArrows" promptText="Add Title" styleClass="text-field">
          <font>
@@ -149,7 +149,7 @@
                   <Insets left="25.0" />
                </GridPane.margin>
             </ImageView>
-            <ImageView fitHeight="71.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2">
+            <ImageView fitHeight="71.0" fitWidth="70.0" onMouseClicked="#export" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2">
                <image>
                   <Image url="@../img/export-file.png" />
                </image>
