--- a/src/ressources/xml/cover.fxml
+++ b/src/ressources/xml/cover.fxml
@@ -144,9 +144,9 @@
          <children>
             <GridPane alignment="CENTER" prefWidth="48.0" GridPane.columnIndex="1">
                <columnConstraints>
-                  <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="75.0" />
-                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="150.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="75.0" />
+                  <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="45.0" />
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="210.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="45.0" />
                </columnConstraints>
                <rowConstraints>
                   <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="TOP" vgrow="SOMETIMES" />
@@ -161,11 +161,17 @@
                      <image>
                         <Image url="@../img/right-arrow.png" />
                      </image>
+                     <GridPane.margin>
+                        <Insets left="-10.0" />
+                     </GridPane.margin>
                   </ImageView>
                   <ImageView fx:id="leftArrow" fitHeight="45.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" GridPane.valignment="CENTER">
                      <image>
                         <Image url="@../img/left-arrow-disabled.png" />
                      </image>
+                     <GridPane.margin>
+                        <Insets right="-10.0" />
+                     </GridPane.margin>
                   </ImageView>
                </children>
             </GridPane>
